--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Ibrahim Sultan | Portfolio</title>
+	<title>Portfolio| Ibrahim Sultan</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
 	<meta name="keywords"
@@ -100,7 +100,7 @@
   border-radius: 60%; "></div>
 
 								<h1><span>Ibrahim Sultan</span></h1>
-								<h3><span>Web Developer / Photographer / VFX & Animation/ Video Creatoer & Graphic
+								<h3><span>Web Developer / Photographer / VFX & Animation/ Video Creator & Graphic
 										Designer</span></h3>
 								<p>
 								<ul class="fh5co-social-icons">
