--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
-  border-radius: 60%; "></div>
+  border-radius: 130px; "></div>
 
 								<h1><span>Ibrahim Sultan</span></h1>
 								<h3><span>Web Developer / Photographer / VFX & Animation/ Video Creatoer & Graphic
