--- a/index.html
+++ b/index.html
@@ -97,10 +97,7 @@
   width: 200px;
   margin: 0 auto;
   margin-bottom: 30px;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  border-radius: 50px; "></div>
+  border-radius: 100%; "></div>
 
 								<h1><span>Ibrahim Sultan</span></h1>
 								<h3><span>Web Developer / Photographer / VFX & Animation/ Video Creatoer & Graphic
