--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   border-radius: 100%; "></div>
 
 								<h1><span>Ibrahim Sultan</span></h1>
-								<h3><span>Web Developer / Photographer / VFX & Animation/ Video Creatoer & Graphic
+								<h3><span>Web Developer / Photographer / VFX & Animation/ Video Editor & Graphic
 										Designer</span></h3>
 								<p>
 								<ul class="fh5co-social-icons">
@@ -165,8 +165,7 @@
 
 						</p>
 
-						<p>I'm very excited to saying that I have become a Perfect Programmer and Web Developer. I have
-							done all this by self taught and little help with my Big Brother.</p>
+						<p>Since I came in this field, I have learned many languages and made projects on every language.</p>
 						<p>I'm from Haryana and living in Faridabad with my happy family. I'm a Student right now,
 							Studying in class 12th at home During this Pandemic Year. I was very noob in techniacal
 							things even I don't knew that how to use Smart Phone
