--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   width: 300px;
   margin: 0 auto;
   margin-bottom: 30px;
-  border-radius: 100%; "></div>
+  border-radius: 70 "></div>
 
 								<h1><span>Ibrahim Sultan</span></h1>
 								<h3><span>Web Developer / Photographer / VFX & Animation/ Video Editor & Graphic
