--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
 					<div class="col-md-8 col-md-offset-2 text-center">
 						<div class="display-t js-fullheight">
 							<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-								<div class="profile-thumb" style="background: url(ibb.png);  background-size: cover !important;
+								<div class="profile-thumb" style="background: url(circle-ibrahim.png);  background-size: cover !important;
   background-position: center center;
   background-repeat: no-repeat;
   position: relative;
-  height: 230px;
-  width: 230px;
+  height: 200px;
+  width: 200px;
   margin: 0 auto;
   margin-bottom: 30px;
-  border-radius: 70px"></div>
+ "></div>
 
 								<h1><span>Ibrahim Sultan</span></h1>
 								<h3><span>Web Developer / Photographer / VFX & Animation/ Video Editor & Graphic
